--- a/styles.css
+++ b/styles.css
@@ -117,8 +117,24 @@ input[type="checkbox"]:checked:after {
     height: 16px;
 } */
 
+.rule {
+    font-weight: bold;
+}
+
+.ruleText {
+    display: none;
+    font-size: 0.875rem;
+    margin-left: 2px;
+    padding-left: 8px;
+    background: #2f3136;
+    border: 1px solid #202225;
+    border-radius: 4px;
+
+}
+
 .ping {
     color: #7289da;
+    font-weight: normal;
     background-color: rgba(114,137,218,.1);
     font-family: Whitney,Helvetica Neue,Helvetica,Arial,sans-serif;
     cursor: pointer;
@@ -129,6 +145,23 @@ input[type="checkbox"]:checked:after {
 .ping:hover {
     color: white;
     background-color: rgba(114,137,218,.7);
+}
+
+#adminPing {
+    color: #e67e22;
+    background-color: rgba(230, 125, 34, 0.1);
+}
+
+#adminPing:hover {
+    background-color: rgba(230, 125, 34, 0.3);
+}
+
+.inlineCode {
+    font-family: Consolas,Andale Mono WT,Andale Mono,Lucida Console,Lucida Sans Typewriter,DejaVu Sans Mono,Bitstream Vera Sans Mono,Liberation Mono,Nimbus Mono L,Monaco,Courier New,Courier,monospace;
+    font-size: 85%;
+    padding: 0.2em;
+    margin: -0.2em 0;
+    background-color: #202225;
 }
 
 .warning {
@@ -198,6 +231,13 @@ input[type="checkbox"]:checked:after {
     /* background-color: rgba(227, 229, 232, 0.85); */
     background-color: rgba(242, 243, 245, 0.85);
 }
+.light .ruleText {
+    background: #c4c7cc;
+    color: black;
+}
+.light .inlineCode {
+    background-color: #929292;
+}
 .light hr {
     border-color: #7289da;
 }
@@ -210,6 +250,32 @@ input[type="checkbox"]:checked:after {
 }
 .light .themeSwitch:active {
     background-color: #252629;
+}
+
+#cookieDialogue {
+    color: white;
+    position: fixed;
+    padding: 20px;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(51, 53, 57, 0.85);
+    z-index: 5;
+}
+
+.light #cookieDialogue {
+    background-color: rgba(242, 243, 245, 0.85);
+    color: #2e3338;   
+}
+
+#acceptCookies {
+    display: inline;
+    width: 35px;
+    height: 35px;
+    background: #43b581 url("/IBO-Discord-Web-Verification/assets/check.svg") no-repeat center;
+    background-size: cover;
+    border: none;
+    float: right;
+    margin-right: 3%;
 }
 
 @media only screen and (max-width: 7680px) {
